--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html> 
 <html> 
-	<head>
-		<title>Introductory Questions</title>
-	</head>
-	<body>
-		<ol>
-  			<li> Tara Wang, Communication Design, Junior </li>
-  			<li> I have two siblings: one in pre-med and the other one has a degree in Computer Science. Because of him, I've been introduced to java script and even encouraged to take CS courses although I haven't had the best experience with coding so far. This class is required so that's why I am in here :) </li>
-  			<li> I have taken Computer Science I so I know a little about Java and C++ but I really struggled in those courses so I am a little nervous about taking another coding class. </li>
-  			<li> I hope to learn to be more comfortable around coding and beign able to build a website people can interacte with, not just look at. </li>
-  			<li> I think the best part of making something on paper is getting the different textures and being able to apply different types of media. The hard part of making something on a screen is finding ways to not make everything feel so digital, even if it is on a a screen. </li>
-  			<li> https://www.squarespace.com/templates  Squarespace to me exemplifies effective design because of the way their website is laid out. Someone can easily find what type of template they want to use to make their own website and the color scheme and photos presented on these templates are really nicely presented. </li>
-  			<li> https://www.swapstl.com/team/ My club created a website and I really enjoy the layout and overall look of the website. As for communication, there are many tabs that explain what are club is about and everything else we are involved in. Overall, I really like how they managed to display everything my club does while still having a nice design.</li>
-  			<li> https://www.youtube.com  Youtube works really well because of the different tabs at the side that lets you see your subscriptions while also having recommendations on the home page and alongside a video you are watching. It also has an easy search system that lets you get lost in the world of YouTube. </li>
-		</ol>
-	</body>
+<head>
+	<title>Introductory Questions</title>  <!--Add a name to the tab-->
+</head>
+		<body>
+		<h1 style="font-family:garamond;">Introductory Questions</h1>  <!--.Adds a heading and changes font-->
+			<font size="4">
+				<ol style="font-family:garamond;">  <!--.Makes a list and changes font-->
+  					<li><p> Tara Wang, Communication Design, Junior </li></p>
+  					<li><p> I have two siblings: one in pre-med and the other one has a degree in Computer Science. Because of him, I've been introduced to java script and even encouraged to take CS courses although I haven't had the best experience with coding so far. This class is required so that's why I am in here :) </li></p>
+  					<li><p>  I have taken Computer Science I so I know a little about Java and C++ but I really struggled in those courses so I am a little nervous about taking another coding class. </li></p>
+  					<li><p>  I hope to learn to be more comfortable around coding and beign able to build a website people can interacte with, not just look at. </li></p>
+  					<li><p>  I think the best part of making something on paper is getting the different textures and being able to apply different types of media. The hard part of making something on a screen is finding ways to not make everything feel so digital, even if it is on a a screen. </li></p>
+  					<!--Add links(look below)-->
+  					<li><p><a href="https://www.squarespace.com/">Squarespace:</a><p> Squarespace to me exemplifies effective design because of the way their website is laid out. Someone can easily find what type of template they want to use to make their own website and the color scheme and photos presented on these templates are really nicely presented. </li></p>
+  					<li><a href="https://www.swapstl.com/team/">Sharing With A Purpose:</a><p> My club created a website and I really enjoy the layout and overall look of the website. As for communication, there are many tabs that explain what are club is about and everything else we are involved in. Overall, I really like how they managed to display everything my club does while still having a nice design.</li></p>
+  					<li><p><a href="https://www.youtube.com">Youtube:</a><p> Youtube works really well because of the different tabs at the side that lets you see your subscriptions while also having recommendations on the home page and alongside a video you are watching. It also has an easy search system that lets you get lost in the world of YouTube. </li></p>
+				</ol>
+			</font>
+		</body>
 </html> 
