--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Lift Yourself Lyrics</title>
 		<link href= "css/lyrics-exercise-styles.css" rel= "stylesheet">
+		<link rel="stylesheet" href="https://use.typekit.net/eba5gxy.css">
 	</head>
 		<body>
 		<div class="leftbox"></div>
