--- a/type-styles/index.html
+++ b/type-styles/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Font Styles</title>
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link href= "css/styles.css" rel="stylesheet">
