--- a/recipe-wireframe/feedback-notes.html
+++ b/recipe-wireframe/feedback-notes.html
@@ -7,7 +7,7 @@
 	<h1>Notes:</h1>
 	<h2>Person 1:</h2>
 	<p>- Font size to small</p>
-	<p>- Center korean spicy rice cake phrase</p>
+	<p>- Fix korean spicy rice cake phrase alignment</p>
 	<p>- Align the prep time and cook time with minutes</p>
 	<p>- Increase leading on instructions</p>
 	<p>- More images</p>
@@ -18,9 +18,8 @@
 	<p>- Small font size</p>
 	<p>- More space between headings</p>
 	<p>- More images to help clarity</p>
-	<p>- Author needs space</p>
 	<p>- More line breaks?</p>
-	<p>- Spacce everything more</p>
+	<p>- Space everything more</p>
 
 
 </body>
