--- a/recipe/index.html
+++ b/recipe/index.html
@@ -42,7 +42,8 @@
 
 	<p class="heading">INGREDIENTS</p>
 	<p>• 1 pound (2 cups) cylindrical rice cakes</p>
-	<p>• Anchovy Stock</p>
+
+	<p class="heading"> ANCHOVY STOCK</p>
 	<p>• 8 dried anchovies, remove head and intestines (black strip in belly)</p>
 	<p>• 1 sheet dried kelp (approx 6x4inches)</p>
 	<p>• 2 fish cake sheets, thawed</p>
@@ -66,8 +67,18 @@
 	<hr/>
 
 	<p class="heading">NOTES</p>
+	<img src="Tteokbokki.rice-cake.jpg">
+	<p> Tteokbokki rice cakes are usually found in the freezer section, so be sure to soak them in hot water for 15 minutes before cooking.</p>
+	<br>
+	<img src="Tteokbokki.fish-cakes.jpg">
+	<p>Spongy fish cakes are cut into 2x1inch strips before adding to the sauce</p>
+	<br>
+	<img src="Tteokbokki.anchovy.jpg">
+	<img src="Tteokbokki.anchovy-stock.jpg">
+	<p>Fish cakes, kelp, and anchovies are boiled to form the base of the chili sauce</p>
+	<br>
+	<img src="Tteokbokki.mix_.jpg">
 	<p>As the rice cakes cook, the sauce will thicken. You can always add reserved anchovy stock to liquify the sauce. Otherwise, keep in sealed container and refrigerate for up to 2 weeks.</p>
-
 
 </body>
 </html>
