--- a/recipe/index.html
+++ b/recipe/index.html
@@ -43,13 +43,13 @@
 	<p class="heading">INGREDIENTS</p>
 	<p>• 1 pound (2 cups) cylindrical rice cakes</p>
 
-	<p class="heading"> ANCHOVY STOCK</p>
+	<p class="headingDetail"> ANCHOVY STOCK</p>
 	<p>• 8 dried anchovies, remove head and intestines (black strip in belly)</p>
-	<p>• 1 sheet dried kelp (approx 6x4inches)</p>
+	<p>• 1 sheet dried kelp (approx 6x4 inches)</p>
 	<p>• 2 fish cake sheets, thawed</p>
 	<p>• 4 cups water</p>
 
-	<p class="heading"> SEASONING</p>
+	<p class="headingDetail"> SEASONING</p>
 	<p>• 2 Tbsp Gochujang (or more depending on your spice level)</p>
 	<p>• ½ Tbsp Gochugaru (Korean chili powder)</p>
 	<p>• ½ Tbsp granulated sugar</body>
@@ -79,6 +79,8 @@
 	<br>
 	<img src="Tteokbokki.mix_.jpg">
 	<p>As the rice cakes cook, the sauce will thicken. You can always add reserved anchovy stock to liquify the sauce. Otherwise, keep in sealed container and refrigerate for up to 2 weeks.</p>
+
+	<p class="heading">NOTES</p>
 
 </body>
 </html>
