--- a/recipe/index.html
+++ b/recipe/index.html
@@ -35,52 +35,50 @@
 	</div>
 
 
-	<hr/>
+	
 	<p class="heading">WHAT IS TTEOKBOKKI? </p>
-	<p>Tteokbokki is a popular Korean snack made up of chewy rice cakes and soft fish cakes in a spicy sweet chili sauce. It's easy to make, fun to share, and extremely addicting!</p>
+	<p class="extraInfo">Tteokbokki is a popular Korean snack made up of chewy rice cakes and soft fish cakes in a spicy sweet chili sauce. It's easy to make, fun to share, and extremely addicting!</p>
 	<hr/>
 
 	<p class="heading">INGREDIENTS</p>
-	<p>• 1 pound (2 cups) cylindrical rice cakes</p>
+	<p class="headingDetailInfotwo">1 pound (2 cups) cylindrical rice cakes</p>
 
 	<p class="headingDetail"> ANCHOVY STOCK</p>
-	<p>• 8 dried anchovies, remove head and intestines (black strip in belly)</p>
-	<p>• 1 sheet dried kelp (approx 6x4 inches)</p>
-	<p>• 2 fish cake sheets, thawed</p>
-	<p>• 4 cups water</p>
+	<p class="headingDetailInfo">8 dried anchovies, remove head and intestines (black strip in belly)</p>
+	<p class="headingDetailInfo">1 sheet dried kelp (approx 6x4 inches)</p>
+	<p class="headingDetailInfo">2 fish cake sheets, thawed</p>
+	<p class="headingDetailInfo">4 cups water</p>
 
 	<p class="headingDetail"> SEASONING</p>
-	<p>• 2 Tbsp Gochujang (or more depending on your spice level)</p>
-	<p>• ½ Tbsp Gochugaru (Korean chili powder)</p>
-	<p>• ½ Tbsp granulated sugar</body>
+	<p class="headingDetailInfo"> 2 Tbsp Gochujang (or more depending on your spice level)</p>
+	<p class="headingDetailInfo"> ½ Tbsp Gochugaru (Korean chili powder)</p>
+	<p class="headingDetailInfo"> ½ Tbsp granulated sugar</body>
 	<hr/>
 
 	<p class="heading">INSTRUCTIONS</p>
-	<p> 1. Place rice cakes in hot water for 15-20 minutes while anchovy stock is being made
-	<p> 2. Place dried anchovies, kelp, and fish cakes into 12 inch skillet. Add water and turn burner to high. When water begins to boil, turn heat to low simmer for 15 minutes
+	<img src="Tteokbokki.rice-cake.jpg">
+	<p> 1. Place rice cakes in hot water to saok for 15-20 minutes while anchovy stock is being made.
+	<img src="Tteokbokki.anchovy.jpg">
+	<img src="Tteokbokki.anchovy-stock.jpg">
+	<p> 2. Place dried anchovies, kelp, and fish cakes into 12 inch skillet. Add water and turn burner to high. When water begins to boil, turn heat to low simmer for 15 minutes.
 	<p> 3. Remove fish cakes and allow to cool. Then strain solids from stock and discard.
 	<p> 4. Measure 1 cup of stock and place back into 12 inch skillet. Keep remaining stock for future use later.
 	<p> 5. Turn heat to medium and add Gochujang, Gochugaru, and sugar. Mix to combine.
-	<p> 7. Then add rice cakes and stir frequently for 5 minutes. Sauce will begin to thicken.
-	<p> 8. Cut fish cakes into 2x1 inch strips and add to skillet. Gently toss
-	<p> 9. Serve with hard boiled egg (optional) and garnish with scallions and sesame seeds.
+	<p> 6. Then add rice cakes and stir frequently for 5 minutes. Sauce will begin to thicken.
+	<img src="Tteokbokki.fish-cakes.jpg">
+	<p> 7. Cut fish cakes into 2x1 inch strips and add to skillet. Gently toss.
+	<p> 8. Serve with hard boiled egg (optional) and garnish with scallions and sesame seeds.
+	<img src="Tteokbokki.final6_ copy.jpg">
+	<p> 9. Enjoy!</p>
 	<hr/>
 
 	<p class="heading">NOTES</p>
-	<img src="Tteokbokki.rice-cake.jpg">
-	<p> Tteokbokki rice cakes are usually found in the freezer section, so be sure to soak them in hot water for 15 minutes before cooking.</p>
-	<br>
-	<img src="Tteokbokki.fish-cakes.jpg">
-	<p>Spongy fish cakes are cut into 2x1inch strips before adding to the sauce</p>
-	<br>
-	<img src="Tteokbokki.anchovy.jpg">
-	<img src="Tteokbokki.anchovy-stock.jpg">
-	<p>Fish cakes, kelp, and anchovies are boiled to form the base of the chili sauce</p>
-	<br>
-	<img src="Tteokbokki.mix_.jpg">
-	<p>As the rice cakes cook, the sauce will thicken. You can always add reserved anchovy stock to liquify the sauce. Otherwise, keep in sealed container and refrigerate for up to 2 weeks.</p>
 
-	<p class="heading">NOTES</p>
+	<img src="Tteokbokki.mix_.jpg">
+	<p class="extraInfo">As the rice cakes cook, the sauce will thicken. You can always add reserved anchovy stock to liquify the sauce. Otherwise, keep in sealed container and refrigerate for up to 2 weeks.</p>
+
+	<footer>This recipe and its images are from <a href="http://www.kimchichick.com/tteokbokki-korean-spicy-rice-cakes/">kimchichick.com</a>
+	</footer>
 
 </body>
 </html>
