--- a/postcards/mockups/index.html
+++ b/postcards/mockups/index.html
@@ -10,21 +10,21 @@
 </head>
 <body>
 
-	<img class= "desk" src="Howl1.jpg" alt="howl pic">
+	<img class= "desk" src="photos/Howl1.jpg" alt="howl pic">
 	<br>
-	<img class= "phone" src="Howl2.jpg" alt="howl pic">
-	<br>
-	<br>
-	<br>
-	<img class= "desk" src="Spirit2.jpg" alt="spirit pic">
-	<br>
-	<img class= "phone" src="Spirit1.jpg" alt="spirit pic">
+	<img class= "phone" src="photos/Howl2.jpg" alt="howl pic">
 	<br>
 	<br>
 	<br>
-	<img class= "desk" src="Toto1.jpg" alt="toto pic">
+	<img class= "desk" src="photos/Spirit2.jpg" alt="spirit pic">
 	<br>
-	<img class= "phone" src="Toto2.jpg" alt="toto pic">
+	<img class= "phone" src="photos/Spirit1.jpg" alt="spirit pic">
+	<br>
+	<br>
+	<br>
+	<img class= "desk" src="photos/Toto1.jpg" alt="toto pic">
+	<br>
+	<img class= "phone" src="photos/Toto2.jpg" alt="toto pic">
 
 </body>
 </html>
