--- a/postcards/feedback/index.html
+++ b/postcards/feedback/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+	<h1>Feedback for Natalia </h1>
 	<h2>Postcard 1:</h2>
 	<p>- thin type face make part of the text hard to read. </p>
 	<p>- title on the desktop one also disappears a little bit. 		Maybe consider changing font color.</p>
@@ -25,7 +26,5 @@
 
 	<p>- Side Comment: play around with image placement. Most of them are in the same position. If that's what you are going for, it would work for your postcards just make the bear desktop layout match the the others. </p>
 	
-
-
 </body>
 </html>
