--- a/microsite/www/index.html
+++ b/microsite/www/index.html
@@ -11,7 +11,7 @@
 
 	<div class="box">
 
-		<a class="link" href="">Warhol Superstars</a>
+		<a class="link" href="index.html">Warhol Superstars</a>
 		<a class="arrow" href="warhol.html">&#8594;</a>
 
 		
