--- a/microsite/finished/Baby_Jane.html
+++ b/microsite/finished/Baby_Jane.html
@@ -18,7 +18,7 @@
 		<div class="box">
 			<img src="Mockup Images/https---s-media-cache-ak0.pinimg.com-736x-9d-18-11-9d18115bacaaa36c749a8f561b12e8bf.jpg">
 
-				<p>The daughter of real estate investor Carl Bruckenfeld, she married Leonard Holzer, an heir to a New York real estate fortune. Holzer was noted for including art projects in his developments, particularly at the Smith Haven Mall.
+				<p><strong>Baby Jane</strong><br> The daughter of real estate investor Carl Bruckenfeld, she married Leonard Holzer, an heir to a New York real estate fortune. Holzer was noted for including art projects in his developments, particularly at the Smith Haven Mall.
 				<br>
 				<br>
 				Movies she appeared in included Andy Warhol’s Soap Opera (1964), Couch (1964), and Camp (1965), and the independently produced Ciao! Manhattan (1972). She co-produced the 1985 film Kiss of the Spider Woman. Holzer is the subject of “Girl of the Year” in Tom Wolfe’s The Kandy-Kolored Tangerine-Flake Streamline Baby (1965) and is referenced twice in the 1972 Roxy Music single “Virginia Plain”.</p>
