--- a/microsite/finished/index.html
+++ b/microsite/finished/index.html
@@ -20,7 +20,7 @@
 
 				<p> Warhol superstars were a clique of New York City personalities promoted by Andy Warhol during the 1960s and early 1970s. These personalities appeared in Warhol's artworks and accompanied him in his social life, epitomizing his famous dictum, "In the future everyone will be famous for fifteen minutes". Warhol would simply film them, and declare them "superstars". The superstars would help Warhol generate publicity while Warhol offered fame and attention in return.</p>
 	  		
-	  		<img class="left"src="Mockup Images/tumblr_mvvasbMsKW1rd1m63o1_500.jpg">
+	  		<img class="left" src="Mockup Images/tumblr_mvvasbMsKW1rd1m63o1_500.jpg" target="_blank" id="btn_Baby_Jane" >
 
 			<img src="Mockup Images/be9686a3020d097e4494ee7459c77738.jpg">
 	
