--- a/microsite/finished/warhol.html
+++ b/microsite/finished/warhol.html
@@ -18,7 +18,7 @@
 		<div class="box">
 			<img src="Mockup Images/18863.37236.jpg">
 
-				<p>Warhol’s studio, The Factory, played host to most of his superstars and as his experiments in film continued he became more interested in the bohemian eccentrics attracted to the studio. Many of the superstars were celebrated in Lou Reed’s song, Walk on the Wild Side.
+				<p><strong>Andy Warhol</strong><br> Warhol's studio, The Factory, played host to most of his superstars and as his experiments in film continued he became more interested in the bohemian eccentrics attracted to the studio. Many of the superstars were celebrated in Lou Reed’s song, Walk on the Wild Side.
 				<br>
 				<br>
 				Warhol significantly reduced his public accessibility after being shot by Valerie Solanas in 1968. The age of the Warhol superstar soon faded.</p>
